# hid_rs

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  jitpack.yml  settings.gradle
android/: build.gradle.kts  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/sayodevice/hid/: FlutterLogger.kt  UsbHidBridge.kt  UsbPermissionReceiver.kt
android/src/main/java/com/sayodevice/hid_rs/: FlutterLogger.kt  HidInit.kt  UsbHidBridge.kt  UsbPermissionReceiver.kt
examples/: simple_test.rs
src/: android_hid.rs  hid_error.rs  hid_report_descriptor.rs  lib.rs  logger.rs  os_hid.rs  send_firmware.js  web_hid.rs
